# s4pkg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.cpp  library.h  version.h.in
include/s4pkg/: library.h  object.h  packageexception.h
include/s4pkg/internal/: dds.h  globals.h  image.h  imagecoder.h  inmemorypackage.h  membuf.h  rle.h  streams.h  types.h
include/s4pkg/lib/: bytebuffer.h  string.h
include/s4pkg/package/: enums.h  flags.h  header.h  indexentry.h  ipackage.h  packages.h  time.h  types.h  version.h
include/s4pkg/resources/: fallbackresource.h  fallbackresourcefactory.h  imageresource.h  iresource.h  iresourcefactory.h
include/s4pkg/resources/ts4/: dstresource.h  dstresourcefactory.h  rleresource.h  rleresourcefactory.h  thumbnailresource.h  thumbnailresourcefactory.h
src/: streams.cpp
src/internal/: dds.cpp  globals.cpp  image.cpp  imagecoder.cpp  rle.cpp  stb_image.cpp  streams.cpp
src/package/: ipackage.cpp  packages.cpp  types.cpp
src/package/impl/: inmemorypackage.cpp
src/resources/: fallbackresource.cpp  fallbackresourcefactory.cpp  imageresource.cpp
src/resources/ts4/: dstresource.cpp  dstresourcefactory.cpp  rleresource.cpp  rleresourcefactory.cpp  thumbnailresource.cpp  thumbnailresourcefactory.cpp
test/: main.cpp
